--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://sakkshm26.github.io/ncs-website",
-  "name": "ncs-website",
+  "homepage": "http://sakkshm26.github.io/pixaflip",
+  "name": "pixaflip",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
